app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo2
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
        - name: echo2
          image: hashicorp/http-echo
          args:
            - "-text=App 2"
          ports:
            - containerPort: 5678
