app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo2
  namespace: default
spec:
  selector:
    app: echo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
