app2/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-route-2
  namespace: default
spec:
  parentRefs:
    - name: gateway1
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /2
      backendRefs:
        - name: echo2
          port: 80
